fix res related visibility

--- a/scss/_input.scss
+++ b/scss/_input.scss
@@ -11,6 +11,14 @@
     }
 }
 
+.res-commentBoxes .infobar {
+    background-color: transparent !important;
+
+    .commentsignupbar__container {
+        background: none;
+    }
+}
+
 textarea:not(#BigText),
 #sr-autocomplete,
 .input {
